<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.285">

        <Button
            android:id="@+id/buttonServList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_list_servant" />

        <Button
            android:id="@+id/buttonOwned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_list_owned"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonResource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_list_resources"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>